LAU-1045 Refactor case disposer deletion process.
 LAU-1045 Refactor case disposer deletion process.