@@ -27,7 +27,6 @@ class CaseFamiliesFilterTest {
     @InjectMocks
     private CaseFamiliesFilter caseFamiliesFilter;
 
-
     @Test
     void shouldFilterSimulationCasesOnly() {
         doReturn(of(DELETABLE_CASE_TYPE_SIMULATION)).when(parameterResolver)
@@ -38,22 +37,22 @@ class CaseFamiliesFilterTest {
 
         final List<CaseFamily> caseFamiliesSimulation = caseFamiliesFilter.geSimulationCasesOnly(caseFamilies);
 
-        assertThat(caseFamiliesSimulation.size()).isEqualTo(1);
+        assertThat(caseFamiliesSimulation).hasSize(1);
 
-        assertThat(caseFamiliesSimulation.get(0).getRootCase().getId())
+        assertThat(caseFamiliesSimulation.getFirst().getRootCase().getId())
                 .isEqualTo(DELETABLE_CASE_FAMILY_SIMULATION.getRootCase().getId());
-        assertThat(caseFamiliesSimulation.get(0).getRootCase().getCaseType())
+        assertThat(caseFamiliesSimulation.getFirst().getRootCase().getCaseType())
                 .isEqualTo(DELETABLE_CASE_FAMILY_SIMULATION.getRootCase().getCaseType());
 
 
-        assertThat(caseFamiliesSimulation.get(0).getLinkedCases().get(0).getId())
-                .isEqualTo(DELETABLE_CASE_FAMILY_SIMULATION.getLinkedCases().get(0).getId());
-        assertThat(caseFamiliesSimulation.get(0).getLinkedCases().get(0).getCaseType())
-                .isEqualTo(DELETABLE_CASE_FAMILY_SIMULATION.getLinkedCases().get(0).getCaseType());
+        assertThat(caseFamiliesSimulation.getFirst().getLinkedCases().getFirst().getId())
+                .isEqualTo(DELETABLE_CASE_FAMILY_SIMULATION.getLinkedCases().getFirst().getId());
+        assertThat(caseFamiliesSimulation.getFirst().getLinkedCases().getFirst().getCaseType())
+                .isEqualTo(DELETABLE_CASE_FAMILY_SIMULATION.getLinkedCases().getFirst().getCaseType());
 
-        assertThat(caseFamiliesSimulation.get(0).getLinkedCases().get(1).getId())
+        assertThat(caseFamiliesSimulation.getFirst().getLinkedCases().get(1).getId())
                 .isEqualTo(DELETABLE_CASE_FAMILY_SIMULATION.getLinkedCases().get(1).getId());
-        assertThat(caseFamiliesSimulation.get(0).getLinkedCases().get(1).getCaseType())
+        assertThat(caseFamiliesSimulation.getFirst().getLinkedCases().get(1).getCaseType())
                 .isEqualTo(DELETABLE_CASE_FAMILY_SIMULATION.getLinkedCases().get(1).getCaseType());
     }
 
@@ -67,69 +66,22 @@ class CaseFamiliesFilterTest {
 
         final List<CaseFamily> deletableCasesOnly = caseFamiliesFilter.getDeletableCasesOnly(caseFamilies);
 
-        assertThat(deletableCasesOnly.size()).isEqualTo(1);
+        assertThat(deletableCasesOnly).hasSize(1);
 
-        assertThat(deletableCasesOnly.get(0).getRootCase().getId())
+        assertThat(deletableCasesOnly.getFirst().getRootCase().getId())
                 .isEqualTo(DELETABLE_CASE_FAMILY.getRootCase().getId());
-        assertThat(deletableCasesOnly.get(0).getRootCase().getCaseType())
+        assertThat(deletableCasesOnly.getFirst().getRootCase().getCaseType())
                 .isEqualTo(DELETABLE_CASE_FAMILY.getRootCase().getCaseType());
 
 
-        assertThat(deletableCasesOnly.get(0).getLinkedCases().get(0).getId())
-                .isEqualTo(DELETABLE_CASE_FAMILY.getLinkedCases().get(0).getId());
-        assertThat(deletableCasesOnly.get(0).getLinkedCases().get(0).getCaseType())
-                .isEqualTo(DELETABLE_CASE_FAMILY.getLinkedCases().get(0).getCaseType());
+        assertThat(deletableCasesOnly.getFirst().getLinkedCases().getFirst().getId())
+                .isEqualTo(DELETABLE_CASE_FAMILY.getLinkedCases().getFirst().getId());
+        assertThat(deletableCasesOnly.getFirst().getLinkedCases().getFirst().getCaseType())
+                .isEqualTo(DELETABLE_CASE_FAMILY.getLinkedCases().getFirst().getCaseType());
 
-        assertThat(deletableCasesOnly.get(0).getLinkedCases().get(1).getId())
+        assertThat(deletableCasesOnly.getFirst().getLinkedCases().get(1).getId())
                 .isEqualTo(DELETABLE_CASE_FAMILY.getLinkedCases().get(1).getId());
-        assertThat(deletableCasesOnly.get(0).getLinkedCases().get(1).getCaseType())
+        assertThat(deletableCasesOnly.getFirst().getLinkedCases().get(1).getCaseType())
                 .isEqualTo(DELETABLE_CASE_FAMILY.getLinkedCases().get(1).getCaseType());
-    }
-
-    @Test
-    void shouldFilterUndeletbaleFromDeletableCases() {
-        final List<CaseFamily> caseFamilies = asList(DELETABLE_CASE_FAMILY,
-                DELETABLE_CASE_FAMILY_SIMULATION);
-
-        final List<List<Long>> failedToDeleteCaseRefs = of(of(1L, 4L), of(7L, 8L, 9L));
-
-        final List<CaseFamily> successfulCaseFamilies = caseFamiliesFilter
-                .filterSuccessfulCaseFamiliesByCaseRef(caseFamilies, failedToDeleteCaseRefs);
-
-        assertThat(successfulCaseFamilies.size()).isEqualTo(1);
-        assertThat(successfulCaseFamilies.get(0).getRootCase().getId()).isEqualTo(30L);
-        assertThat(successfulCaseFamilies.get(0).getRootCase().getReference()).isEqualTo(30L);
-
-        assertThat(successfulCaseFamilies.get(0).getLinkedCases().get(0).getId()).isEqualTo(30L);
-        assertThat(successfulCaseFamilies.get(0).getLinkedCases().get(0).getReference()).isEqualTo(30L);
-
-        assertThat(successfulCaseFamilies.get(0).getLinkedCases().get(1).getId()).isEqualTo(31L);
-        assertThat(successfulCaseFamilies.get(0).getLinkedCases().get(1).getReference()).isEqualTo(31L);
-    }
-
-    @Test
-    void shouldNotFilterCases() {
-        final List<CaseFamily> caseFamilies = asList(DELETABLE_CASE_FAMILY,
-                DELETABLE_CASE_FAMILY_SIMULATION);
-
-        final List<List<Long>> failedToDeleteCaseRefs = of(of(5L, 6L), of(7L, 8L, 9L));
-
-        final List<CaseFamily> successfulCaseFamilies = caseFamiliesFilter
-                .filterSuccessfulCaseFamiliesByCaseRef(caseFamilies, failedToDeleteCaseRefs);
-
-        assertThat(successfulCaseFamilies.size()).isEqualTo(2);
-    }
-
-    @Test
-    void shouldFilterAllCases() {
-        final List<CaseFamily> caseFamilies = asList(DELETABLE_CASE_FAMILY,
-                DELETABLE_CASE_FAMILY_SIMULATION);
-
-        final List<List<Long>> failedToDeleteCaseRefs = of(of(1L, 4L), of(30L, 31L));
-
-        final List<CaseFamily> successfulCaseFamilies = caseFamiliesFilter
-                .filterSuccessfulCaseFamiliesByCaseRef(caseFamilies, failedToDeleteCaseRefs);
-
-        assertThat(successfulCaseFamilies.size()).isEqualTo(0);
     }
 }
